--- a/dse-k8s-operator/example-dse-datacenter.yaml
+++ b/dse-k8s-operator/example-dse-datacenter.yaml
@@ -1,29 +1,34 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: dse-storage
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
+---
 apiVersion: datastax.com/v1alpha1
 kind: DseDatacenter
 metadata:
-  name: dc1
+  name: dc-1
 spec:
-  dseClusterName: cluster1
-  repository: datastaxlabs/dse-k8s-server
-  version: 6.8.0-20190822
-  size: 3
+  dseClusterName: demo-cluster
+  size: 1
+  repository: datastaxlabs/dse-k8s-server:6.8.0-20190822
+  dseVersion: 6.8.0
   storageclaim:
     storageclassname: dse-storage
     resources:
       requests:
         storage: 20Gi
   racks:
-    - name: r1
-    - name: r2
-    - name: r3
+    - name: rack-1
   config:
     dse-yaml:
       authentication_options:
         enabled: False
-    #cassandra-yaml:
-    #  num_tokens: 32
-    #jvm-options:
-    #  initial_heap_size: "16g"
-    #  max_heap_size: "16g"
-    #10-write-prom-conf:
-    #  enabled: True
+    cassandra-yaml:
+      num_tokens: 16
+    # jvm-options:
+    #  initial_heap_size: "4g"
+    #  max_heap_size: "4g"
+    10-write-prom-conf:
+     enabled: True
