--- a/dse-k8s-operator/datastax-operator-manifests.yaml
+++ b/dse-k8s-operator/datastax-operator-manifests.yaml
@@ -90,9 +90,12 @@ spec:
     listKind: DseDatacenterList
     plural: dsedatacenters
     singular: dsedatacenter
-  scope: Namespaced
+  scope: ""
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
+      description: DseDatacenter is the Schema for the dsedatacenters API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -107,7 +110,17 @@ spec:
         metadata:
           type: object
         spec:
+          description: DseDatacenterSpec defines the desired state of DseDatacenter
           properties:
+            allowMultipleNodesPerWorker:
+              description: Turning this option on allows multiple DSE pods to be created
+                on a k8s worker node. By default the operator creates just one DSE
+                pod per k8s worker node using k8s podAntiAffinity and requiredDuringSchedulingIgnoredDuringExecution.
+              type: boolean
+            canaryUpgrade:
+              description: Indicates DSE configuration and container image changes
+                should only be pushed to the first rack of the datacenter
+              type: boolean
             configBuilderImage:
               description: Container image for the DSE config builder init container,
                 with host, path, and tag
@@ -118,6 +131,32 @@ spec:
                 in the same Kubernetes namespace, they will join together in a multi-datacenter
                 DSE cluster.
               type: string
+            dseImage:
+              description: 'DSE container image name. More info: https://kubernetes.io/docs/concepts/containers/images'
+              type: string
+            dseSuperuserSecret:
+              description: This secret defines the username and password for the DSE
+                superuser.
+              type: string
+            dseVersion:
+              description: DSE version number
+              type: string
+            managementApiAuth:
+              description: Config for DSE Management API certificates
+              properties:
+                insecure:
+                  type: object
+                manual:
+                  properties:
+                    clientSecretName:
+                      type: string
+                    serverSecretName:
+                      type: string
+                  required:
+                  - clientSecretName
+                  - serverSecretName
+                  type: object
+              type: object
             parked:
               description: Indicates no DSE nodes should run, like powering down bare
                 metal servers. Volume resources will be left intact in Kubernetes
@@ -130,20 +169,39 @@ spec:
                 replication factor in the keyspaces you plan to create, and the number
                 of racks cannot easily be changed once a datacenter is deployed.
               items:
+                description: DseRack ...
                 properties:
                   name:
                     description: The rack name
+                    type: string
+                  zone:
+                    description: Zone name to pin the rack, using node affinity
                     type: string
                 required:
                 - name
                 type: object
               type: array
-            repository:
-              description: DSE container image repository, with host and path
-              type: string
             resources:
               description: Kubernetes resource requests and limits, per DSE pod
+              properties:
+                limits:
+                  additionalProperties:
+                    type: string
+                  description: 'Limits describes the maximum amount of compute resources
+                    allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                  type: object
+                requests:
+                  additionalProperties:
+                    type: string
+                  description: 'Requests describes the minimum amount of compute resources
+                    required. If Requests is omitted for a container, it defaults
+                    to Limits if that is explicitly specified, otherwise to an implementation-defined
+                    value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                  type: object
               type: object
+            serviceAccount:
+              description: The k8s service account to use for DSE pods
+              type: string
             size:
               description: Desired number of DSE server nodes
               format: int32
@@ -153,28 +211,50 @@ spec:
               properties:
                 resources:
                   description: Resource requirements
+                  properties:
+                    limits:
+                      additionalProperties:
+                        type: string
+                      description: 'Limits describes the maximum amount of compute
+                        resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                      type: object
+                    requests:
+                      additionalProperties:
+                        type: string
+                      description: 'Requests describes the minimum amount of compute
+                        resources required. If Requests is omitted for a container,
+                        it defaults to Limits if that is explicitly specified, otherwise
+                        to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                      type: object
                   type: object
                 storageclassname:
                   type: string
               required:
               - storageclassname
               type: object
-            version:
-              description: DSE container image tag
-              type: string
           required:
-          - size
           - dseClusterName
+          - dseVersion
+          - size
           type: object
         status:
+          description: DseDatacenterStatus defines the observed state of DseDatacenter
           properties:
             nodes:
               description: The number of the DSE server nodes
               format: int32
               type: integer
+            superUserUpserted:
+              description: The timestamp at which CQL superuser credentials were last
+                upserted to the DSE management API
+              format: date-time
+              type: string
           required:
           - nodes
+          - superUserUpserted
           type: object
+      type: object
+      x-kubernetes-preserve-unknown-fields: true
   version: v1alpha1
   versions:
   - name: v1alpha1
@@ -198,7 +278,7 @@ spec:
       serviceAccountName: dse-operator
       containers:
         - name: dse-operator
-          image: datastaxlabs/dse-k8s-operator:0.3.0-20190822
+          image: datastaxlabs/dse-k8s-operator:0.4.0-20191113
           imagePullPolicy: IfNotPresent
           env:
             - name: WATCH_NAMESPACE
