--- a/dse-k8s-operator/example-dse-datacenter.yaml
+++ b/dse-k8s-operator/example-dse-datacenter.yaml
@@ -1,34 +1,31 @@
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: dse-storage
-provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
----
 apiVersion: datastax.com/v1alpha1
 kind: DseDatacenter
 metadata:
-  name: dc-1
+  name: dc1
 spec:
-  dseClusterName: demo-cluster
-  size: 1
-  repository: datastaxlabs/dse-k8s-server
-  version: 6.8.0-20190822
+  dseClusterName: cluster1
+  dseImage: datastaxlabs/dse-k8s-server:6.8.0-20191113
+  dseVersion: 6.8.0
+  managementApiAuth:
+    insecure: {}
+  size: 3
   storageclaim:
     storageclassname: dse-storage
     resources:
       requests:
         storage: 20Gi
   racks:
-    - name: rack-1
+    - name: r1
+    - name: r2
+    - name: r3
   config:
     dse-yaml:
       authentication_options:
         enabled: False
-    cassandra-yaml:
-      num_tokens: 16
-    # jvm-options:
-    #  initial_heap_size: "4g"
-    #  max_heap_size: "4g"
-    10-write-prom-conf:
-     enabled: True
+    #cassandra-yaml:
+    #  num_tokens: 32
+    #jvm-server-options:
+    #  initial_heap_size: "16g"
+    #  max_heap_size: "16g"
+    #10-write-prom-conf:
+    #  enabled: True
