Fixing typo in storageClaim of example datacenter

--- a/dse-k8s-operator/example-dse-datacenter.yaml
+++ b/dse-k8s-operator/example-dse-datacenter.yaml
@@ -9,7 +9,7 @@ spec:
   managementApiAuth:
     insecure: {}
   size: 3
-  storageclaim:
+  storageClaim:
     storageclassname: dse-storage
     resources:
       requests:
